--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ body {
 .error {
     color: white;
     font-size: 1em;
-    animation: blinker .2s cubic-bezier(.8, 1, 1, 1) infinite alternate;
+    /* animation: blinker .2s cubic-bezier(.8, 1, 1, 1) infinite alternate; */
 }
 
 
