--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,43 @@ body {
 }
 
 
+/* ##################
+    Modal Content 
+###################*/
+
+.modal-content {
+  background-color: black;
+  color: #fff;
+  top: 400px;
+  margin: auto;
+  text-align: right;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+}
+
+.modal-content p {
+  text-align: center;
+}
+
+/***************
+The Close Button
+ ***************/
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
 
  /* Wobble To Top Right */
  @-webkit-keyframes tix {
